--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "bulma": "^0.4.2",
+    "semantic-ui": "^2.2.10",
     "vue": "^2.3.3"
   },
   "devDependencies": {
