--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "eslint-plugin-standard": "^3.0.1",
     "file-loader": "^0.9.0",
     "node-sass": "^4.5.0",
+    "pug": "^2.0.0-rc.2",
+    "pug-loader": "^2.3.0",
     "sass-loader": "^5.0.1",
     "vue-loader": "^12.1.0",
     "vue-template-compiler": "^2.3.3",
