Installing eslint html

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "css-loader": "^0.25.0",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-html": "^2.0.3",
     "eslint-plugin-import": "^2.3.0",
     "eslint-plugin-node": "^4.2.2",
     "eslint-plugin-promise": "^3.5.0",
