--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bulma": "^0.4.3",
+    "serve": "^6.0.2",
     "trae": "^1.4.2",
     "vue": "^2.3.3",
     "vue-router": "^2.7.0",
