--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "platzi-music",
+  "name": "platzi-music-vue",
   "description": "App curso Vue.js de Platzi",
   "version": "1.0.0",
   "author": "Ignacio Anaya <ignacio.anaya89@gmail.com>",
